--- a/KrausxRGA/UI/wndSrNumberInfo.xaml
+++ b/KrausxRGA/UI/wndSrNumberInfo.xaml
@@ -375,6 +375,7 @@
                                                 </Button>
                                             </Canvas>
                                         </Border>
+                                        <!-- Zoom image captured. -->
                                         <Border Name="bdrZoomImage" Canvas.Left="473" Canvas.Top="242" BorderThickness="2" Visibility="Hidden" CornerRadius="5" BorderBrush="#FF9B20E2">
                                             <Image Height="369" Canvas.Left="417" Stretch="Fill"  Canvas.Top="130"
                                                    Width="524" Name="imgZoom" Visibility="Visible" 
