Save Return Table.

--- a/KrausxRGA/UI/wndBoxInformation.xaml
+++ b/KrausxRGA/UI/wndBoxInformation.xaml
@@ -99,7 +99,8 @@
                             </Border>
                         </Canvas>
                     </Border>
-                
+                    <TextBlock Name="txt" Canvas.Left="835" TextWrapping="Wrap" Text="TextBlock" Canvas.Top="170"/>
+
                 </Canvas>
             </Border>
         </Grid>
