--- a/KrausxRGA/UI/wndSrNumberInfo.xaml
+++ b/KrausxRGA/UI/wndSrNumberInfo.xaml
@@ -19,7 +19,8 @@
                         <TextBlock x:Name="tbProjectTitle" Canvas.Left="335" TextWrapping="Wrap" Text="RGA Manager" Canvas.Top="27" Height="46" Width="424" FontSize="30" Foreground="White"/>
                     </Canvas>
                     <Canvas Name="cvMainArea" Height="677" Canvas.Top="100" Width="1400">
-                        <TabControl Height="677" Width="1400" BorderBrush="#FF405EB8" Margin="2,2,2,2">
+                        <TabControl Height="677" Name="tbrgzdetail" Width="1400" BorderBrush="#FF405EB8" Margin="2,2,2,2" 
+                                    SelectionChanged="tbrgzdetail_SelectionChanged_1">
                             <TabItem Header="RMA Details" Height="50" Width="200" FontSize="30" Foreground="#FF1BACFF" BorderBrush="#FF405EB8" BorderThickness="2">
                                 <Border Name="bdrmain" >
                                     <Canvas Name="cvsTb1main" Margin="0,0,0,0">
@@ -427,8 +428,49 @@
                             </TabItem>
                         </TabControl>
                     </Canvas>
+                    <Border BorderThickness="1" Height="82" Canvas.Top="695" Width="1050" Canvas.Left="5">
+                        <Canvas>
+                            <Border Name="bdrMsg" BorderThickness="1" Height="27" Canvas.Left="0" Canvas.Top="53" Width="1048" Background="#E1007ACC">
+                                <Border.Style >
+                                    <Style TargetType="{x:Type Border}">
+                                        <Style.Triggers>
+                                            <Trigger Property="Visibility" Value="Visible">
+                                                <Trigger.EnterActions >
+                                                    <BeginStoryboard>
+                                                        <Storyboard>
+                                                            <DoubleAnimation 
+                                                                Storyboard.TargetProperty="(Canvas.Left)" 
+                                                                From="2000" 
+                                                                To="0"
+                                                                Duration="0:0:1">
+                                                                <DoubleAnimation.EasingFunction>
+                                                                    <BounceEase Bounces="1"
+                                                                                EasingMode="EaseOut" 
+                                                                                Bounciness="10" />
+                                                                </DoubleAnimation.EasingFunction>
+                                                            </DoubleAnimation>
+                                                        </Storyboard>
+                                                    </BeginStoryboard>
+                                                </Trigger.EnterActions>
+                                            </Trigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Border.Style>
+                                <TextBlock Name="txtError" Style="{StaticResource ScrollTextBlockKeyStyle}" TextWrapping="Wrap" Text="sdfasdf" Margin="9,0,-1,2" HorizontalAlignment="Left" Width="1038"/>
+                            </Border>
+                        </Canvas>
+                    </Border>
+
+
                 </Canvas>
             </Border>
+            
+           
+            
+            
+            
+            
+            
         </Grid>
     </Viewbox>
 </Window>
